--- a/pages/16436.html
+++ b/pages/16436.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8468/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -464,7 +462,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -559,7 +557,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -650,7 +648,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -830,10 +828,10 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometric</a> analog of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti-de Sitter spacetime</a>. By the discussion at <em><a href='supersymmetry#ClassificationSuperconformal'>supersymmetry – Classification – Superconformal and super anti de Sitter symmetry</a></em> this includes the following <a class='existingWikiWord' href='/nlab/show/coset'>coset</a> <a class='existingWikiWord' href='/nlab/show/super+spacetime'>superspacetimes</a>:</p>
-<table><thead><tr><th><math class='maruku-mathml' display='inline' id='mathml_0d49b30bf4711784b4a1c9be029b2a4a85bf141c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math></th><th><a class='existingWikiWord' href='/nlab/show/super+anti+de+Sitter+spacetime'>super anti de Sitter spacetime</a></th></tr></thead><tbody><tr><td style='text-align: left;'>4</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_0d49b30bf4711784b4a1c9be029b2a4a85bf141c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><mn>8</mn><mo stretchy='false'>/</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>3</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>7</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{OSp(8/4)}{Spin(3,1) \times SO(7)}\;\;\;\;</annotation></semantics></math></td></tr>
-<tr><td style='text-align: left;'>5</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_0d49b30bf4711784b4a1c9be029b2a4a85bf141c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>/</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>4</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{SU(2,2/5)}{Spin(4,1)\times SO(5)}\;\;\;\;</annotation></semantics></math></td></tr>
-<tr><td style='text-align: left;'>7</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_0d49b30bf4711784b4a1c9be029b2a4a85bf141c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><mn>6</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>/</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>6</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{OSp(6,2/4)}{Spin(6,1) \times SO(4)}\;\;\;\;</annotation></semantics></math></td></tr>
+<p>A <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometric</a> analog of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti-de Sitter spacetime</a>. By the discussion at <em><a href='supersymmetry#ClassificationSuperconformal'>supersymmetry – Classification – Superconformal and super anti de Sitter symmetry</a></em> this includes the following <a class='existingWikiWord' href='/nlab/show/coset'>coset</a> <a class='existingWikiWord' href='/nlab/show/super+spacetime'>superspacetimes</a> (<a class='existingWikiWord' href='/nlab/show/super+Klein+geometry'>super Klein geometries</a>):</p>
+<table><thead><tr><th><math class='maruku-mathml' display='inline' id='mathml_5d483541ef3298cdf32407f2e3d2b498a0e170d4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math></th><th><a class='existingWikiWord' href='/nlab/show/super+anti+de+Sitter+spacetime'>super anti de Sitter spacetime</a></th></tr></thead><tbody><tr><td style='text-align: left;'>4</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5d483541ef3298cdf32407f2e3d2b498a0e170d4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><mn>8</mn><mo stretchy='false'>/</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>3</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>7</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{OSp(8/4)}{Spin(3,1) \times SO(7)}\;\;\;\;</annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'>5</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5d483541ef3298cdf32407f2e3d2b498a0e170d4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>/</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>4</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{SU(2,2/5)}{Spin(4,1)\times SO(5)}\;\;\;\;</annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'>7</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5d483541ef3298cdf32407f2e3d2b498a0e170d4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><mn>6</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>/</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>6</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>SO</mi><mo stretchy='false'>(</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\;\;\;\;\frac{OSp(6,2/4)}{Spin(6,1) \times SO(4)}\;\;\;\;</annotation></semantics></math></td></tr>
 </tbody></table>
 <p>Notice that the <a class='existingWikiWord' href='/nlab/show/de+Sitter+spacetime'>de Sitter spacetime</a> (not anti-de Sitter) does not have a standard extension to <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>, but see <a href='https://arxiv.org/abs/1610.01566'>arXiv:1610.01566</a>.</p>
 
@@ -870,19 +868,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 13, 2016 11:38:42 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  <p>
+  Last revised on April 23, 2018 at 08:10:37.
+  See the <a href="https://ncatlab.org/nlab/history/super anti de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+anti+de+Sitter+spacetime/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/super+anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/super+anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+anti+de+Sitter+spacetime/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/super+anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
+  | <a href="https://ncatlab.org/nlab/show/super anti de Sitter spacetime/cite" style="color: black">Cite</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/super+anti+de+Sitter+spacetime" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/super+anti+de+Sitter+spacetime" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/super+anti+de+Sitter+spacetime" id="view_source" rel="nofollow">Source</a>
