--- a/pages/2512.html
+++ b/pages/2512.html
@@ -306,11 +306,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Hisham Sati (<a href='https://nyuad.nyu.edu/en/academics/divisions/science/faculty/hisham-ahmad-sati.html'>website</a>) is working on <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> phenomena in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>/<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> using tools of <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>. His thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Michael Duff</a>.</p>
+    <p>Hisham Sati (<a href='https://nyuad.nyu.edu/en/academics/divisions/science/faculty/hisham-ahmad-sati.html'>faculty page</a>) is working on <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> phenomena in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>/<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> using tools of <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>. His thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Michael Duff</a>.</p>
 
-<p>Hisham Sati is assistant professor in the Mathematics Department at Pittsburgh University.</p>
+<p>Hisham Sati is an associate professor of mathematics at NYU Abu Dhabi.</p>
 
-<p>From his <a href='http://www.mathematics.pitt.edu/person/hisham-sati'>website</a>:</p>
+<p>From his <a href='https://web.archive.org/web/20170811155442/http://www.mathematics.pitt.edu/person/hisham-sati'>cached Pitt faculty page</a>:</p>
 
 <blockquote>
 <p>My research is interdisciplinary and lies in the intersection of <a class='existingWikiWord' href='/nlab/show/differential+geometry'>differential geometry</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a>, and <a class='existingWikiWord' href='/nlab/show/mathematical+physics'>mathematical/theoretical physics</a>. I am mainly interested in geometric and topological structures arising from <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum (topological) field theory</a>, <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>, and <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>. This includes <a class='existingWikiWord' href='/nlab/show/orientation+in+generalized+cohomology'>orientations</a> with respect to <a class='existingWikiWord' href='/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology'>generalized cohomology theories</a>, and corresponding description via <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometric</a>, <a class='existingWikiWord' href='/nlab/show/topology'>topological</a>, and <a class='existingWikiWord' href='/nlab/show/category+theory'>categorical</a> notions of <a class='existingWikiWord' href='/nlab/show/bundle'>bundles</a>.</p>
@@ -330,7 +330,7 @@ margin-left: 0em;
 
 <p>part I, Proc. Symp. Pure Math. 81 (2010), 181-236 (<a href='http://arXiv.org/abs/1001.5020'>arXiv:1001.5020</a>),</p>
 
-<p>part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em>, J. Australian Math. Soc. 90 (2011), 93-108 (<a href='http://arxiv.org/abs/1007.5419'>arXiv:1007.5419</a>);</p>
+<p>part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_0a3901a32c94dd3126d894c9e05dd3b5708eb88a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_0a3901a32c94dd3126d894c9e05dd3b5708eb88a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em>, J. Australian Math. Soc. 90 (2011), 93-108 (<a href='http://arxiv.org/abs/1007.5419'>arXiv:1007.5419</a>);</p>
 
 <p>part <em>III: Twisted higher structures</em>, Int. J. Geom. Meth. Mod. Phys. 8 (2011), 1097-1116 (<a href='http://arxiv.org/abs/1008.1755'>arXiv:1008.1755</a>)</p>
 </li>
@@ -355,7 +355,7 @@ margin-left: 0em;
 <p>On <a class='existingWikiWord' href='/nlab/show/F4'>F4</a> and <a class='existingWikiWord' href='/nlab/show/Cayley+plane'>Cayley plane</a>-<a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundles</a> in <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>:</p>
 
 <ul>
-<li>H.S. <em><math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝕆</mi><msup><mi>P</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{O}P^2</annotation></semantics></math>-bundles in M-theory</em>, Commun. Num. Theor. Phys 3:495-530,2009 (<a href='http://arxiv.org/abs/0807.4899'>arXiv:0807.4899</a>)</li>
+<li>H.S. <em><math class='maruku-mathml' display='inline' id='mathml_0a3901a32c94dd3126d894c9e05dd3b5708eb88a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝕆</mi><msup><mi>P</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{O}P^2</annotation></semantics></math>-bundles in M-theory</em>, Commun. Num. Theor. Phys 3:495-530,2009 (<a href='http://arxiv.org/abs/0807.4899'>arXiv:0807.4899</a>)</li>
 </ul>
 
 <p>On mathematical foundations of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> and <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>:</p>
@@ -423,14 +423,16 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 22, 2018 at 16:34:12.
+  Last revised on April 23, 2018 at 10:27:29.
   See the <a href="https://ncatlab.org/nlab/history/Hisham Sati" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hisham+Sati" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hisham+Sati/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Hisham+Sati" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hisham+Sati" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Hisham+Sati" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hisham+Sati/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Hisham+Sati" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hisham+Sati" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
+  | <a href="https://ncatlab.org/nlab/show/Hisham Sati/cite" style="color: black">Cite</a>
 
   <span class="views">
     | Views:
