--- a/pages/16343.html
+++ b/pages/16343.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Herrmann Minkowski in nLab
+      Hermann Minkowski in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,19 +283,17 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Herrmann Minkowski
+      Hermann Minkowski
   </h1>
 
 
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8471/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,19 +306,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
+    <p>
+ 
+</p>
+
+<ul>
 <li><a href='http://en.wikipedia.org/wiki/Hermann_Minkowski'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d9b05c7742ba66cba2c527d031563f1c3820b7c6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<p>On what is now called <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>:</p>
+
+<blockquote>
+<p id='TheViewsOfSpaceAndTime'> The views of space and time that I wish to lay before you have sprung from the soil of experimental physics, and therein lies their strength. They are radical. Henceforth space by itself, and time by itself, are doomed to fade away into mere shadows, and only a kind of union of both will retain an independent reality.</p>
+</blockquote>
+
+<p>(Address to the 80th Assembly of German Natural Scientists and Physicians, (Sep 21, 1908), see <a href='https://en.wikiquote.org/wiki/Hermann_Minkowski'>WikiQuote</a>)</p>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_bd564a7d9bbac117f1ed8f3d11a638c87b9a603c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quadratic+form'>quadratic form</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quadratic+form'>quadratic form</a>, <a class='existingWikiWord' href='/nlab/show/Minkowski+metric'>Minkowski metric</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a></p>
 </li>
 </ul>
 
@@ -328,22 +338,23 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March  9, 2015 12:39:19 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.15.236.31)
+  <p>
+  Last revised on April 23, 2018 at 13:44:13.
+  See the <a href="https://ncatlab.org/nlab/history/Hermann Minkowski" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Herrmann+Minkowski" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Hermann+Minkowski" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermann+Minkowski/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Hermann+Minkowski" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermann+Minkowski" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Hermann Minkowski/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
-    <a href="/nlab/print/Herrmann+Minkowski" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
-    <a href="/nlab/tex/Herrmann+Minkowski" id="view_tex" rel="nofollow">TeX</a>
+    | Views:
+    <a href="/nlab/print/Hermann+Minkowski" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/source/Herrmann+Minkowski" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/tex/Hermann+Minkowski" id="view_tex" rel="nofollow">TeX</a>
+    |
+    <a href="/nlab/source/Hermann+Minkowski" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
