--- a/pages/19196.html
+++ b/pages/19196.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -639,10 +639,22 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts_2'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
 <p>An <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> is called <em>semi-free</em> if it is a <a class='existingWikiWord' href='/nlab/show/free+action'>free action</a> after restriction to the <a class='existingWikiWord' href='/nlab/show/complement'>complement</a> of the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed points</a>. In other words, it is semi-free if all its <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer groups</a> are either the full group itself or the <a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a>.</p>
+
+<h2 id='related_concepts_2'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/transitive+action'>transitive action</a>, <a class='existingWikiWord' href='/nlab/show/free+action'>free action</a>, <a class='existingWikiWord' href='/nlab/show/semi-free+action'>semi-free action</a>, <a class='existingWikiWord' href='/nlab/show/regular+action'>regular action</a>,</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/proper+action'>proper action</a>, <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuous action</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -670,15 +682,15 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on April 17, 2018 at 09:08:07.
+  Last revised on April 24, 2018 at 09:16:30.
   See the <a href="https://ncatlab.org/nlab/history/semi-free action" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/semi-free+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-
+  <a href="/nlab/edit/semi-free+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/semi-free+action/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/semi-free+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/semi-free+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/semi-free action/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/semi-free+action" accesskey="p" id="view_print" rel="nofollow">Print</a>
